manifests/apps/gearpit-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gearpit-web-svc
spec:
  selector:
    app: gearpit-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
